--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,159 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poor+Story&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --transition: all 400ms ease;
+
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-sm: 90%;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  font-family: "Poor Story", system-ui;
+  background: url("https://images7.alphacoders.com/134/1342752.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100vh;
+  color: whitesmoke;
+  line-height: 1.7;
+}
+
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 500;
+}
+
+section {
+  margin-top: 8rem;
+}
+
+section > h2,
+section > h5 {
+  text-align: center;
+  color: white;
+}
+
+section > h2 {
+  color: white;
+  margin-bottom: 3rem;
+}
+
+.text-dark {
+  font-size: 55px;
+  color: rgba(245, 245, 17, 0.798);
+}
+
+.header__socials a {
+  margin: 1%;
+}
+
+.me {
+  height: 35vh;
+  width: 35vh;
+}
+
+.title {
+  transition: var(--transition);
+  cursor: pointer; /* Set the default cursor */
+  font-size: 65px; /* Adjust the default font size */
+  color: whitesmoke; /* Adjust the default text color */
+}
+
+.title:hover {
+  font-size: 75px;
+  color: rgb(149, 95, 199);
+}
+
+a {
+  font-size: 25px;
+  color: whitesmoke;
+}
+
+.btn {
+  width: max-content;
+  display: inline-block;
+  color: black;
+  padding: 0.75rem 1.2rem;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  background: rgb(149, 95, 199);
+  border: 2.5px solid black;
+  transition: var(--transition);
+  margin: 0.31%;
+  font-weight: bolder;
+}
+
+.btn:hover {
+  border: 3px solid rgba(245, 245, 17, 0.798);
+  color: rgba(245, 245, 17, 0.798);
+  font-size: 30px;
+}
+
+.btn-primary {
+  background: transparent;
+  color: black;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+/* ============== MEDIA Med DEVICES ======= */
+
+@media screen and (max-width: 1024px) {
+  .container {
+    width: var(--container-width-md);
+  }
+
+  section {
+    margin-top: 6rem;
+  }
+
+  
+}
+
+/* ============== MEDIA Small DEVICES ======= */
+
+@media screen and (max-width: 600px) {
+   
+
+    .container {
+    width: var(--container-width-sm);
+    }
+
+    section > h2 {
+    margin-bottom: 2rem;
+    }
+
+ 
+}
+
