--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -70,26 +70,22 @@
 }
 
 .about__content p {
-  margin: 2rem 0 3rem;
+  margin: 2rem;
   width: 100%;
   height:  30%;
   aspect-ratio: 1/1;
   border-radius: 2rem;
-  background: linear-gradient(
-    45deg,
-    rgb(87, 0, 128),
-    silver,
-    rgb(148, 100, 172)
-  );
+  background-color: black; 
   display: grid;
   place-items: center;
   color: black;
   font-weight: bolder;
   font-size: 1.3rem;
+  color: white;
 }
 
 .about__content p .basecamp__link {
-  color: black;
+  color: white;
   font-weight: bolder;
   font-size: 1.3rem;
 }
