--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -8,22 +8,24 @@
   height: 400px;
   width: 400;
 }
+
 article.portfolio__item {
+  position: relative; /* Add position: relative for positioning absolute elements */
   border-radius: 2rem;
-  border: 1px solid transparent;
-  transition: var(--transition);
+  border: 1px solid;
   background-color: rgb(154, 5, 253);
   padding: 5%;
   text-align: center;
-  background: url("https://static.vecteezy.com/system/resources/previews/030/678/816/non_2x/purple-texture-high-quality-free-photo.jpg");
+  background-size: cover; /* Make the background image cover the entire container */
+  background: url("https://getwallpapers.com/wallpaper/full/6/c/d/129192.jpg");
   background-position: center;
+  background-repeat: none;
+  border-color: #8a2be2; /* Neon purple color */
+  border-width: 4px; /* Adjust the border width as needed */
 }
 
-.portfolio__item:hover {
-  border-color: purple;
-  backdrop-filter: blur(10px);
-  background: transparent;
-}
+
+
 
 .portfolio__item-image {
   border-radius: 1.5rem;
@@ -35,9 +37,17 @@ article.portfolio__item {
 }
 
 .portfolio__item-cta {
-  display: flex;
-  gap: 1rem;
-  margin-bottom: 1rem;
+  text-align: center;
+  padding-top: 10%;
+}
+
+.portfolio__item-cta a {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  border: 2px solid white;
+  border-radius: 0.5rem;
+  color: white;
+  text-decoration: none;
 }
 
 /* ============== MEDIA Med DEVICES ======= */
