--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -3,6 +3,14 @@
   --transition: 0.3s ease; /* You can adjust the transition time */
 }
 
+.experience {
+  background: url("https://4kwallpapers.com/images/wallpapers/purple-light-geometric-glowing-lines-minimalist-5k-2880x1800-6724.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+}
+
 .experience__container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -35,7 +43,8 @@
 .experience__content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 2rem;
+  row-gap: 2.5rem;
+  column-gap: 2rem;
 }
 
 .experience__details {
@@ -44,25 +53,14 @@
   gap: 1rem;
 }
 
-
-
 .experience__details:hover .experience__icons {
   color: rgb(114, 13, 237);
   animation: neon-glow 1s infinite alternate;
 }
 
-@keyframes neon-glow {
-  to {
-    text-shadow: 0 0 5px #8a2be2, 0 0 10px #b5ca28, 0 0 20px #8a2be2;
-  }
-}
-
-
 .experience__details-icon {
-  margin-top: 6px;
+  margin-top: 5px;
 }
-
- 
 
 .i .experience_title {
   text-align: center;
@@ -79,13 +77,6 @@
 .experience__frontend:hover,
 .experience__backend:hover {
   animation: neon-glow 1s infinite alternate;
-}
-
-@keyframes neon-glow {
-  to {
-    text-shadow: 0 0 10px #8a2be2, 0 0 20px #8a2be2, 0 0 30px #8a2be2;
-    box-shadow: 0 0 10px #8a2be2, 0 0 20px #8a2be2, 0 0 30px #8a2be2;
-  }
 }
 
 /* ============== MEDIA Med DEVICES ======= */
@@ -110,11 +101,17 @@
 
 @media screen and (max-width: 600px) {
   .experience__container {
-    gap: 1rem;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+
+  .experience {
+    padding-bottom: 50%; /* Adjusted for smaller devices */
   }
 
   .experience__container > div {
-    width: 100%;
-    padding: 2rem 1rem;
+    width: 90%; 
+    font-size: 1.2rem; 
+    margin: 0 auto;
   }
 }
