--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,3 +1,11 @@
+.projects {
+  background: url("https://4kwallpapers.com/images/wallpapers/purple-light-geometric-glowing-lines-minimalist-5k-2880x1800-6724.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+}
+
 .portfolio__container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -13,19 +21,12 @@ article.portfolio__item {
   position: relative; /* Add position: relative for positioning absolute elements */
   border-radius: 2rem;
   border: 1px solid;
-  background-color: rgb(154, 5, 253);
+  background-color: black;
   padding: 5%;
   text-align: center;
-  background-size: cover; /* Make the background image cover the entire container */
-  background: url("https://getwallpapers.com/wallpaper/full/6/c/d/129192.jpg");
-  background-position: center;
-  background-repeat: none;
   border-color: #8a2be2; /* Neon purple color */
   border-width: 4px; /* Adjust the border width as needed */
 }
-
-
-
 
 .portfolio__item-image {
   border-radius: 1.5rem;
@@ -64,6 +65,14 @@ article.portfolio__item {
 @media screen and (max-width: 600px) {
   .portfolio__container {
     grid-template-columns: 1fr;
-    gap: 1rem;
+    gap: 3rem;
+
+    padding-bottom: 10%;
+  
+    
+  }
+
+  article.portfolio__item {
+    height: 80%;
   }
 }
