--- a/src/index.css
+++ b/src/index.css
@@ -28,14 +28,11 @@ html {
 
 body {
   font-family: "Poor Story", system-ui;
-  background: url("https://images7.alphacoders.com/134/1342752.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background-color: hsl(0, 0%, 0%);
   height: 100vh;
   color: whitesmoke;
   line-height: 1.7;
+  
 }
 
 .container {
@@ -135,6 +132,7 @@ img {
 @media screen and (max-width: 1024px) {
   .container {
     width: var(--container-width-md);
+    overflow: hidden;
   }
 
   section {
@@ -147,6 +145,7 @@ img {
 @media screen and (max-width: 600px) {
   .container {
     width: var(--container-width-sm);
+    overflow: hidden;
   }
 
   section > h2 {
